Updating p .About me details.

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Trying to make super sweet code for the masses...</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>From San Diego, California!</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Making Art for the eyes and ears.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Being challenged, compensated and Happy.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Fredericksbrug, V.A.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>It began with a career in Graphic Design, and that led me Here!</p>
     </section>
 
     <footer id="footer">
